--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,8 +22,10 @@
 <!--            android:label="@string/title_activity_demo"-->
 <!--            android:theme="@style/Theme.My_Stories" />-->
         <activity android:name=".demo.MainActivityDemo" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivityTest" />
         <activity
-            android:name=".MainActivity"
+            android:name=".story_rcv.MainActivityRcv"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
